--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 08 16:53:56 MDT 2016
-sdk.dir=/afs/ualberta.ca/home/s/a/sajediba/Android/Sdk
+#Wed Jan 10 19:57:21 MST 2018
+sdk.dir=/afs/ualberta.ca/home/i/s/isla/Android/Sdk
